test(kitchenpos) : 상품 메뉴 테스트